# foundry-sandbox

./: .env.example  .foundry-mcp.toml  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GAPS.md  LICENSE  NEXTSTEPS.md  PLAN-CHECKLIST.md  PLAN-FIXES.md  PLAN.md  PLAN1.md  PLAN2.md  PLAN3.md  PLAN_API_GATEWAY_SIDECAR.md  PLAN_CODEX.md  PLAN_CREDENTIAL_ISOLATION.md  PLAN_FIX.md  PLAN_GEMINI.md  PLAN_OPENCODE.md  README.md  comparison.md  completion.bash  docker-compose.credential-isolation.yml  docker-compose.yml  entrypoint-root.sh  entrypoint.sh  findings.md  foundry.yaml  gaps.md  install.sh  items.md  next.md  nextwork.md  opencode_hyp.md  plan-checklist.md  plan.md  (+9 more)
api-proxy/: Dockerfile  codex-token-manager.py  entrypoint.sh  gemini-token-manager.py  github-api-filter.py  github_config.py  inject-credentials.py  multi-provider-token-manager.py  opencode-token-manager.py  stub-auth-codex.json  stub-auth-gemini.json  stub-auth-opencode.json  stub-gemini-accounts.json  stub-gemini-settings.json  stub-opencode-config.json
commands/: attach.sh  build.sh  config.sh  destroy-all.sh  destroy.sh  help.sh  info.sh  list.sh  new.sh  preset.sh  prune.sh  refresh-credentials.sh  start.sh  status.sh  stop.sh  upgrade.sh
config/: allowlist.yaml  policy.yaml.example  push-file-restrictions.yaml  user-services.yaml.example
docs/: README.md  SECURITY.md  architecture.md  certificates.md  configuration.md  foundry-and-sbx.md  getting-started.md  observability.md  operations.md  parity-diffs.md  sbx-compatibility.md  sbx-docker-questions.md  sbx-phase0-report.md
foundry-git-safety/: README.md  pyproject.toml
foundry-git-safety/default_config/: foundry.yaml.example  push-file-restrictions.yaml
foundry-git-safety/docs/: configuration.md  security-model.md
foundry-git-safety/foundry_git_safety/: __init__.py  auth.py  branch_isolation.py  branch_output_filter.py  branch_types.py  cli.py  command_validation.py  commit_validation.py  config.py  decision_log.py  deep_policy_engine.py  deep_policy_proxy.py  github_config.py  github_filter.py  logging_config.py  metrics.py  operations.py  pktline.py  policies.py  push_validation.py  security_policies.py  server.py  subprocess_env.py  user_services_proxy.py  wrapper.sh
foundry-git-safety/foundry_git_safety/default_config/: deep-policy-github.yaml  foundry.yaml.example  push-file-restrictions.yaml
foundry-git-safety/foundry_git_safety/schemas/: __init__.py  foundry_yaml.py
foundry-git-safety/tests/: conftest.py
foundry-git-safety/tests/integration/: conftest.py  test_config_loading.py  test_git_api_server.py  test_github_proxy.py  test_observability_endpoints.py
foundry-git-safety/tests/security/: test_command_allowlist_invariants.py  test_credential_leak_audit.py  test_deep_policy_github_parity.py  test_github_blocklist_invariants.py  test_hmac_rotation.py  test_output_filter_invariants.py  test_privilege_escalation.py  test_proxy_auth.py
foundry-git-safety/tests/unit/: conftest.py  test_auth.py  test_branch_isolation.py  test_branch_output_filter.py  test_branch_types.py  test_chaos.py  test_command_validation.py  test_commit_validation.py  test_config.py  test_decision_log.py  test_deep_policy_engine.py  test_deep_policy_proxy.py  test_github_filter.py  test_logging_config.py  test_metrics.py  test_operations.py  test_packaging.py  test_performance.py  test_pktline.py  test_policies.py  test_push_validation.py  test_schemas.py  test_security_policies.py  test_subprocess_env.py  test_user_services_proxy.py
foundry_sandbox/: __init__.py  _bridge.py  api_keys.py  artifacts.py  atomic_io.py  claude_settings.py  cli.py  compose.py  config.py  constants.py  container_configurator.py  container_io.py  container_setup.py  credential_setup.py  docker.py  errors.py  foundry_config.py  foundry_plugin.py  foundry_upgrade.py  git.py  git_path_fixer.py  git_safety.py  git_worktree.py  ide.py  image.py  legacy_bridge.py  mcp_builtins.py  migration.py  models.py  network.py  opencode_sync.py  paths.py  permissions.py  proxy.py  pypi_version.py  sbx.py  settings_merge.py  skills.py  state.py  stub_manager.py  (+9 more)
gateway/: Dockerfile  allowlist.conf  build-config.sh  build-configs.sh  dnsmasq.conf  entrypoint.sh  firewall-allowlist.generated  gateway.py  requirements.txt  test_gateway.py  tinyproxy-filter  tinyproxy.conf
lib/: api_keys.sh  args.sh  constants.sh  container_config.sh  docker.sh  format.sh  fs.sh  gateway.sh  git.sh  git_worktree.sh  host_config.sh  ide.sh  image.sh  inspect.sh  json.sh  network.sh  paths.sh  permissions.sh  prompt.sh  proxy.sh  runtime.sh  state.sh  tmux.sh  utils.sh  validate.sh
safety/: credential-proxy-init.sh  credential-redaction.sh  gateway-credential-helper  gateway-gitconfig  network-firewall.sh  network-mode  operator-approve  sandbox-completions.bash  shell-overrides.sh  sudoers-allowlist
sbx/: sbx.md  sbx_completion.md  sbx_completion_bash.md  sbx_completion_fish.md  sbx_completion_powershell.md  sbx_completion_zsh.md  sbx_create.md  sbx_create_claude.md  sbx_create_codex.md  sbx_create_copilot.md  sbx_create_docker-agent.md  sbx_create_gemini.md  sbx_create_kiro.md  sbx_create_opencode.md  sbx_create_shell.md  sbx_diagnose.md  sbx_exec.md  sbx_login.md  sbx_logout.md  sbx_ls.md  sbx_policy.md  sbx_policy_allow.md  sbx_policy_allow_network.md  sbx_policy_deny.md  sbx_policy_deny_network.md  sbx_policy_log.md  sbx_policy_ls.md  sbx_policy_reset.md  sbx_policy_rm.md  sbx_policy_rm_network.md  sbx_policy_set-default.md  sbx_ports.md  sbx_reset.md  sbx_rm.md  sbx_run.md  sbx_secret.md  sbx_secret_ls.md  sbx_secret_rm.md  sbx_secret_set.md  sbx_stop.md  (+6 more)
scripts/: bench-git-safety.py  bench-git-safety.sh  build-foundry-template.sh  ci-local.sh  smoke-test.sh
stubs/: AGENTS.md  CLAUDE.md  git-api-standalone.py  git-wrapper-sbx.sh  git-wrapper.sh  proxy-sign.sh
tests/: README.md  conftest.py  docker-compose.test.yml  mocks.py  redteam-sandbox.sh  run.sh  test-pip-install-integration.sh  test-pip-requirements.sh  test-shell-overrides.sh  test_validate.sh
(+536 files in other folders)
