[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foundry-sandbox"
version = "0.1.0"
description = "Docker-based sandbox environment for running Claude Code with isolated credentials"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
]

[project.scripts]
cast = "foundry_sandbox.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
]
test-orchestration = [
    "pyyaml>=6.0",
]
test-proxy = [
    "flask>=3.0",
    "mitmproxy>=10.0",
    "httpx>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib -m 'not slow'"
norecursedirs = ["__pycache__", ".git", ".hypothesis"]
markers = [
    "slow: marks tests as slow/integration-heavy",
    "security: marks security-focused tests",
    "orchestration: marks docker orchestration/lifecycle tests",
]

[tool.mypy]
strict = true
python_version = "3.10"
exclude = ["tests/"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["foundry_sandbox"]
