[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foundry-sandbox"
version = "0.15.2"
description = "Docker-based sandbox environment for running Claude Code with isolated credentials"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Foundry Works" },
]
keywords = ["claude", "sandbox", "docker", "ai", "isolation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/foundry-works/foundry-sandbox"
Repository = "https://github.com/foundry-works/foundry-sandbox"
Issues = "https://github.com/foundry-works/foundry-sandbox/issues"
Documentation = "https://github.com/foundry-works/foundry-sandbox/tree/main/docs"

[project.scripts]
cast = "foundry_sandbox.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
]
test-orchestration = [
    "pyyaml>=6.0",
]
test-proxy = [
    "flask>=3.0",
    "mitmproxy>=10.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib -m 'not slow' --timeout=120"
# NOTE: CI workflows that need slow tests must pass `-m ''` to clear the
# marker filter, NOT `-o addopts=...` which replaces the entire addopts
# string and drops --import-mode.
# --timeout=120 prevents hung tests from consuming the full job timeout.
norecursedirs = ["__pycache__", ".git", ".hypothesis"]
markers = [
    "slow: marks tests as slow/integration-heavy",
    "security: marks security-focused tests",
    "orchestration: marks docker orchestration/lifecycle tests",
]

[tool.mypy]
strict = true
python_version = "3.10"
exclude = ["tests/"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
"unified-proxy/tests/**" = ["E402"]
"lib/python/**" = ["E402"]

[tool.hatch.build.targets.wheel]
packages = ["foundry_sandbox"]
