[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foundry-git-safety"
version = "0.1.0"
description = "Standalone git safety layer for sandbox environments"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Foundry Works" },
]
keywords = ["git", "sandbox", "security", "isolation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "flask>=3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/foundry-works/foundry-sandbox"
Repository = "https://github.com/foundry-works/foundry-sandbox"
Issues = "https://github.com/foundry-works/foundry-sandbox/issues"

[project.scripts]
foundry-git-safety = "foundry_git_safety.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib --timeout=120"
markers = [
    "slow: marks tests as slow/integration-heavy",
    "security: marks security-focused tests",
]

[tool.mypy]
strict = true
python_version = "3.10"
exclude = ["tests/"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]

[tool.hatch.build.targets.wheel]
packages = ["foundry_git_safety"]
